# AIE_KAN

./: CMakeLists.txt  core01.cc  core01.h  core02.cc  core02.h  core02lut.h  core03.cc  core03.h  core03lut.h  core04.cc  core04.h  core04lut.h  core05.cc  core05.h  core06.cc  core06.h  core06lut.h  graph.h
data/: input_exponential.txt  input_linear.txt  input_quadratic.txt  input_sinusoidal.txt  output_exponential.txt  output_linear.txt  output_quadratic.txt  output_sinusoidal.txt
src/: core01.cc  core01.h  core01lut.h  core02.cc  core03.cc  core04.cc  core05.cc  core05.h  core05lut.h  core06.cc  graph.cpp  graph.h
